--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["mongodb", "test"],
+  "keywords": [
+    "mongodb",
+    "test"
+  ],
   "author": "hyperbotauthor",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^3.6.2"
   }
 }
