--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "hyperbotauthor",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2"
   }
