--- a/stuff/config
+++ b/stuff/config
@@ -7,13 +7,13 @@
 	url = https://github.com/hyperbotauthor/mongodbtest
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [remote "gitlab"]
-	url = https://gitlab.com/hyperchessbotauthor/mongodbtest
+	url = https://gitlab.com/hyperchessbotauthor/mongodbtest.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [user]
 	name = hyperbotauthor
 	email = hyperchessbotauthor@gmail.com
 	[credential "https://github.com/hyperbotauthor/mongodbtest"]
 		username = hyperbotauthor
-	[credential "https://gitlab.com/hyperchessbotauthor/mongodbtest"]
+	[credential "https://gitlab.com/hyperchessbotauthor/mongodbtest.git"]
 		username = hyperchessbotauthor
 	
