--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2"
+    "express-session": "^1.17.1",
+    "mongodb": "^3.6.2",
+    "passport": "^0.4.1",
+    "passport-lichess": "^1.1.0"
   }
 }
