--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "hyperbotauthor",
   "license": "MIT",
   "dependencies": {
+    "@easychessanimations/sse": "^1.0.7",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
