--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
     "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "passport-lichess": "^1.1.0"
   }
 }
