--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^3.6.2",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
+    "passport-github": "^1.1.0",
     "passport-lichess": "^1.1.0"
   }
 }
