--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
+    "discord.js": "^12.5.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
